Cambios pre presesntacion